--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Insure landing page</title>
-
+  <link rel="stylesheet" href="assets/css/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,11 +13,20 @@
   </style>
 </head>
 <body>
+  <header>
+    <nav>
+      <img src="assets/images/logo.svg" alt="Insure-Logo">
+      <ul>
+        <li><a href="">How we work</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Account</a></li>
+        <li><a href="">View plans</a></li>
+      </ul>
+    </nav>
+  </header>
+  
 
-  How we work
-  Blog
-  Account
-  View plans
+
 
   Humanizing your insurance.
 
