Added Intro Section

--- a/index.html
+++ b/index.html
@@ -24,21 +24,56 @@
       </ul>
     </nav>
   </header>
-  
 
+  <main>
 
+    <article id="intro">
+      <img id="bg-pattern-intro-left" src="assets/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left">
+      <img id="bg-pattern-intro-right" src="assets/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right">
+      <img id="family" src="assets/images/image-intro-desktop.jpg" alt="family">
+      <h2>Humanizing <br> your insurance.</h2>
+      <p>Get your life insurance coverage easier and faster. We blend our expertise 
+        and technology to help you find the plan that’s right for you. Ensure you 
+        and your loved ones are protected.</p>
+      <a href="#">View plans</a>
+    </article>
 
-  Humanizing your insurance.
+    <!-- <section>
+      <h2>We’re different</h2>
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+      <article>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </article>
 
-  View plans
+      <article>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </article>
 
-  We’re different
+      <article>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </article>
 
-  Snappy Process
+      <article>
+        <h2></h2>
+        <a href=""></a>
+        <img src="" alt="">
+      </article>
+
+    </section>
+    
+  </main>
+
+  <footer>
+
+  </footer> -->
+
+  <!-- Snappy Process
 
   Our application process can be completed in minutes, not hours. Don’t get 
   stuck filling in tedious forms.
@@ -81,8 +116,7 @@
 
   Careers
   Press
-  Licenses
-
+  Licenses -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
