--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <nav>
       <img src="assets/images/logo.svg" alt="Insure-Logo">
       <ul>
-        <li><a href="">How we work</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Account</a></li>
-        <li><a href="">View plans</a></li>
+        <li><a href="#">How we work</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Account</a></li>
+        <li><a href="#" class="btn">View plans</a></li>
       </ul>
     </nav>
   </header>
@@ -31,66 +31,56 @@
       <img id="bg-pattern-intro-left" src="assets/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left">
       <img id="bg-pattern-intro-right" src="assets/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right">
       <img id="family" src="assets/images/image-intro-desktop.jpg" alt="family">
-      <h2>Humanizing <br> your insurance.</h2>
+      <h2 class="line-before big-header">Humanizing <br> your insurance.</h2>
       <p>Get your life insurance coverage easier and faster. We blend our expertise 
         and technology to help you find the plan that’s right for you. Ensure you 
         and your loved ones are protected.</p>
-      <a href="#">View plans</a>
+      <a href="#" class="btn">View plans</a>
     </article>
 
-    <!-- <section>
-      <h2>We’re different</h2>
+    <section>
+      <h2 class="line-before big-header">We’re different</h2>
 
+      <div id="cards">
       <article>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="assets/images/icon-snappy-process.svg" alt="">
+        <h3>Snappy Process</h3>
+        <p>Our application process can be completed in minutes, not hours. Don’t get 
+          stuck filling in tedious forms.</p>
       </article>
 
       <article>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="assets/images/icon-affordable-prices.svg" alt="">
+        <h3>Affordable Prices</h3>
+        <p>We don’t want you worrying about high monthly costs. Our prices may be low, 
+          but we still offer the best coverage possible.</p>
       </article>
 
       <article>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="assets/images/icon-people-first.svg" alt="">
+        <h3>People First</h3>
+        <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make 
+          sure you’re covered when you need it.</p>
       </article>
+      </div>
 
-      <article>
-        <h2></h2>
-        <a href=""></a>
-        <img src="" alt="">
+      <article id="how-we-work">
+        <h2 class="big-header">Find out more <br> about how we work</h2>
+        <a href="#" class="btn">How we work</a>
+        <!-- <img src="assets/images/bg-pattern-how-we-work-desktop.svg" alt=""> -->
       </article>
-
+     
     </section>
     
   </main>
 
   <footer>
 
-  </footer> -->
+  </footer>
 
-  <!-- Snappy Process
+  <!-- 
 
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
+  
 
   Our company
 
