--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
   </header>
 
   <main>
-
     <article id="intro">
       <img id="bg-pattern-intro-left" src="assets/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left">
       <img id="bg-pattern-intro-right" src="assets/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right">
@@ -69,48 +68,52 @@
         <a href="#" class="btn">How we work</a>
         <!-- <img src="assets/images/bg-pattern-how-we-work-desktop.svg" alt=""> -->
       </article>
-     
     </section>
-    
   </main>
 
   <footer>
+    <div id="social-media">
+      <img src="assets/images/logo.svg" alt="Insure-Logo">
+      <ul>
+        <li><a href="#"><img src="assets/images/icon-facebook.svg" alt="icon-facebook"></a></li>
+        <li><a href="#"><img src="assets/images/icon-twitter.svg" alt="icon-twitter"></a></li>
+        <li><a href="#"><img src="assets/images/icon-pinterest.svg" alt="icon-pinterest"></a></li>
+        <li><a href="#"><img src="assets/images/icon-instagram.svg" alt="icon-instagram"></a></li>
+      </ul>
+    </div>
 
+    <div id="footer-nav">
+      <ul>
+        <li>Our company</li>
+        <li><a href="">How we work</a></li>
+        <li><a href="">Why Insure?</a></li>
+        <li><a href="">View plans</a></li>
+        <li><a href="">Reviews</a></li>
+      </ul>
+      <ul>
+        <li>Help me</li>
+        <li><a href="">FAQ</a></li>
+        <li><a href="">Terms of use</a></li>
+        <li><a href="">Privacy policy</a></li>
+        <li><a href="">Cookies</a></li>
+      </ul>
+      <ul>
+        <li>Contact</li>
+        <li><a href="">Sales</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Live chat</a></li>
+      </ul>
+      <ul>
+        <li>Others</li>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">Licenses</a></li>
+      </ul>
+    </div>
   </footer>
-
-  <!-- 
-
-  
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://eddicodes.github.io/Portfolio-Website/">Edward Agyeman</a>.
-  </div>
+  <!-- <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://eddicodes.github.io/Portfolio-Website/">Edward Agyeman</a>.
+  </div> -->
 </body>
 </html>
