--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <main>
     <article id="intro">
-      <img id="bg-pattern-intro-left" src="assets/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left">
-      <img id="bg-pattern-intro-right" src="assets/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right">
+      <!-- <img id="bg-pattern-intro-left" src="assets/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left">
+      <img id="bg-pattern-intro-right" src="assets/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right"> -->
       <img id="family" src="assets/images/image-intro-desktop.jpg" alt="family">
       <h2 class="line-before big-header">Humanizing <br> your insurance.</h2>
       <p>Get your life insurance coverage easier and faster. We blend our expertise 
