Edited Background Images

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
   <main>
     <img id="family" src="assets/images/image-intro-desktop.jpg" alt="family">
     <article id="intro">
-      <!-- <img id="bg-pattern-intro-left" src="assets/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left">
-      <img id="bg-pattern-intro-right" src="assets/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right"> -->
       <h2 class="line-before big-header">Humanizing <br> your insurance.</h2>
       <p>Get your life insurance coverage easier and faster. We blend our expertise 
         and technology to help you find the plan that’s right for you. Ensure you 
@@ -110,9 +108,9 @@
       </ul>
     </div>
   </footer>
-  <!-- <div class="attribution">
+  <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://eddicodes.github.io/Portfolio-Website/">Edward Agyeman</a>.
-  </div> -->
+  </div>
 </body>
 </html>
