--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <li><a href="#">Account</a></li>
         <li><a href="#" class="btn">View plans</a></li>
       </ul>
+      <div id="mobile-nav">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
   </header>
 
